<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.campustribune.frontpage.FrontPageActivity">


    <item android:id="@+id/action_refresh"
        android:title="Refresh"
        app:showAsAction="always"
        android:orderInCategory="1"
        android:icon="@drawable/ic_action_refresh"/>
   <!-- <item
        android:id="@+id/submenu_search"
        android:title="@string/submenu_action_search"/>-->

    <item
        android:id="@+id/submenu_userprofile"
        android:title="@string/submenu_action_view_userprofile"/>

    <item
        android:id="@+id/submenu_frontPage"
        android:title="@string/submenu_action_front_page"/>

    <item
        android:id="@+id/submenu_createpost"
        android:title="@string/submenu_action_create_post"/>

    <!-- Added by Aditi on 07/23/2016 START -->
    <item
        android:id="@+id/submenu_createevent"
        android:title="@string/submenu_action_create_event"/>

    <item
        android:id="@+id/submenu_viewallevents"
        android:title="@string/submenu_action_view_all_events"/>
    <!-- Added by Aditi on 07/23/2016 END -->

</menu>



