<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:paddingLeft="15dp"
    android:paddingRight="15dp">

    <TextView
        android:id="@+id/entered_event_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:textSize="20dp"/>


    <Button
        android:id="@+id/pick_event_start_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/pick_event_end_date"
        android:layout_below="@+id/entered_event_title"
        android:text="@string/pick_start_date"/>

    <Button
        android:id="@id/pick_event_end_date"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/entered_event_title"
        android:text="@string/pick_end_date"/>

    <TextView
        android:id="@+id/chosen_start_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/chosen_end_date"
        android:layout_below="@+id/pick_event_start_date"
        android:textSize="15dp"/>

    <TextView
        android:id="@+id/chosen_end_date"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/pick_event_end_date"
        android:textSize="15dp"/>

    <Button
        android:id="@+id/pick_event_start_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/pick_event_end_time"
        android:layout_below="@+id/chosen_start_date"
        android:text="@string/pick_start_time"/>

    <Button
        android:id="@id/pick_event_end_time"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/chosen_end_date"
        android:text="@string/pick_end_time"/>

    <TextView
        android:id="@+id/chosen_start_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/chosen_end_time"
        android:layout_below="@+id/pick_event_start_time"
        android:textSize="15dp"/>

    <TextView
        android:id="@+id/chosen_end_time"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/pick_event_end_time"
        android:textSize="15dp"/>

    <Button
        android:id="@+id/pick_event_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/chosen_start_time"
        android:text="@string/pick_location"/>

    <TextView
        android:id="@+id/chosen_event_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/pick_event_location"
        android:textSize="15dp"
        android:text="No location selected"/>

    <ImageView
        android:id="@+id/event_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/chosen_event_location"
        android:layout_toLeftOf="@+id/capture_image"
        android:layout_alignParentLeft="true"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:src="@mipmap/ic_launcher"/>

    <TextView
        android:id="@+id/capture_image"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/chosen_event_location"
        android:layout_alignParentRight="true"
        android:textSize="15dp"
        android:textColorHint="@color/colorAccent"
        android:text="@string/capture_photo"/>

    <TextView
        android:id="@+id/add_image"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/capture_image"
        android:layout_alignParentRight="true"
        android:layout_marginTop="10dp"
        android:textSize="15dp"
        android:textColorHint="@color/colorAccent"
        android:text="@string/add_photo"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/event_image"
        android:background="@color/colorPrimaryDark"
        android:text="@string/cancel_button_label"
        android:textColor="@color/gradientEndColor"
        android:id="@+id/cancel_button_eventsmoredetails"
        android:layout_gravity="left"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/event_image"
        android:layout_toRightOf="@+id/cancel_button_eventsmoredetails"
        android:background="@color/colorPrimaryDark"
        android:text="@string/previous_button_label"
        android:textColor="@color/gradientEndColor"
        android:id="@+id/previous_button_eventsmoredetails"
        android:layout_gravity="right"
        android:onClick="gotomoredetailspage"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        android:layout_below="@+id/event_image"
        android:layout_toRightOf="@+id/previous_button_eventsmoredetails"
        android:background="@color/colorPrimaryDark"
        android:text="@string/create_button_label"
        android:textColor="@color/gradientEndColor"
        android:id="@+id/create_button_eventsmoredetails"
        android:layout_gravity="right"
        android:onClick="gotomoredetailspage"/>

</RelativeLayout>